# RAE

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  client.go  data.proto  go.mod  ip.go  main.go  program.go  server.go  test_executable
data/: distribute.exec
proto/: application.proto
rpc/: RAE.pb.go  RAE.proto  RAE_grpc.pb.go
rpc/proto/: rae.pb.go  rae.proto  rae_grpc.pb.go
samples/: stream_program.go
samples/hello_world/: hello_world
samples/input_handler/: input_handler.go
samples/stream_text/: stream_program.go  stream_text
src/: application.rs  client.rs  client_main.rs  consts.rs  executor.rs  file_io.rs  main.rs  server.rs  server_main.rs
src/client/: file_io.rs  mod.rs
src/samples/: input_echo.rs  input_output_stream.rs
src/server/: executor.rs  file_io.rs  mod.rs  server.rs
