[package]
name = "rae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server_main.rs"

[[bin]]
name = "client"
path = "src/client_main.rs"

[[bin]]
name = "sample-hello-world"
path = "src/samples/hello_world.rs"

[dependencies]
tokio = { version = "1.18.2", features = ["full", "macros", "rt-multi-thread"] }
bytes = "1.1.0"
tonic = "0.7.2"
prost = "0.10.3"
async-stream = "0.3.3"
futures-core = "0.3.21"

[build-dependencies]
tonic-build = "0.7.2"

