[package]
name = "rae"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server_main.rs"

[[bin]]
name = "client"
path = "src/client_main.rs"

# Example binaries
[[bin]]
name = "sample-hello-world"
path = "src/samples/hello_world.rs"

[[bin]]
name = "sample-input-echo"
path = "src/samples/input_echo.rs"


[dependencies]
tokio = { version = "1.18.2", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["net"] }
bytes = "1.1.0"
tonic = "0.7.2"
prost = "0.10.3"
async-stream = "0.3.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
nix = "0.24.1"
ctrlc = { version = "3.2.2", features = ["termination"]}

[build-dependencies]
tonic-build = "0.7.2"

